syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.antiserver.protocol";
option java_outer_classname = "RemoteAntiserver";

package io.antiserver.protocol;

// The Antiserver service definition.
service RemoteAntiserverService {

  rpc Invoke (RemoteAntiserverRequest) returns (RemoteAntiserverResponse) {}

  rpc Preload (RemoteAntiserverPreloadRequest) returns (RemoteAntiserverPreloadResponse) {}

}

message RemoteAntiserverRequest {
  string            function = 1;
  bytes             input    = 2;
  repeated string   mavenDependencies = 3;
  repeated bytes    jarDependencies = 4;
}

message RemoteAntiserverResponse {
  string function = 1;
  bytes  output   = 2;
}

message RemoteAntiserverPreloadRequest {
  repeated string   mavenDependencies = 1;
}

message RemoteAntiserverPreloadResponse {
}